grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
        - image: grafana/grafana:3.1.1
          name: grafana
          # env:
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: grafana-persistent-storage
            mountPath: /var
        - name: grafana-import-dashboards
          image: docker
          command: ["/bin/sh", "-c"]
          workingDir: /opt/grafana-import-dashboards
          args:
            # FIXME use kubernetes probe instead of "until curl"
            - >
              [...]
          volumeMounts:
          - name: config-volume
            mountPath: /opt/grafana-import-dashboards
      volumes:
      - name: config-volume
        configMap:
          name: grafana-import-dashboards
      - name: grafana-persistent-storage
        persistentVolumeClaim:
          claimName: prometheus-grafana
