prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    name: prometheus
    kubernetes.io/name: "Prometheus"
  name: prometheus
spec:
  selector:
    app: prometheus
  #type: NodePort
  ports:
  - name: prometheus
    protocol: TCP
    port: 9090
    targetPort: 9090
