alertmanager-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: alertmanager
  name: alertmanager
spec:
  host: alert-monitoring.wimhofmethod.com
  port:
    targetPort: alertmanager
  to:
    kind: Service
    name: alertmanager
    weight: 100
