grafana-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: grafana
    component: core
  name: grafana
spec:
  host: grafana-monitoring.wimhofmethod.com
  port:
    targetPort: grafana
  to:
    kind: Service
    name: grafana
    weight: 100
