prometheus-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    kubernetes.io/name: Prometheus
    name: prometheus
  name: prometheus
spec:
  host: prometheus-monitoring.wimhofmethod.com
  port:
    targetPort: prometheus
  to:
    kind: Service
    name: prometheus
    weight: 100
