prometheus-template.yml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: prometheus
objects:
- apiVersion: v1
  data:
    prometheus.yml: |
      [...]
  kind: ConfigMap
  metadata:
    name: prometheus
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    generation: 4
    labels:
      app: prometheus
    name: prometheus
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: prometheus
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: prometheus
        name: prometheus
      spec:
        containers:
        - args:
          - -storage.local.retention=6h
          - -storage.local.memory-chunks=500000
          - -config.file=/etc/prometheus/prometheus.yml
          image: quay.io/coreos/prometheus:latest
          imagePullPolicy: IfNotPresent
          name: prometheus
          ports:
          - containerPort: 9090
            name: web
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /etc/prometheus
            name: config-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            name: prometheus
          name: config-volume
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/scrape: "true"
    labels:
      name: prometheus
    name: prometheus
  spec:
    ports:
    - name: prometheus
      port: 9090
      protocol: TCP
      targetPort: 9090
    selector:
      app: prometheus
    sessionAffinity: None
    type: NodePort
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: prometheus
    name: prometheus
  spec:
    port:
      targetPort: prometheus
    to:
      kind: Service
      name: prometheus
      weight: 100
